sparse-struct/tests/ui/struct.stderr
error: `SparseStruct` can only be derived for `enum`s
 --> tests/ui/struct.rs:4:1
  |
4 | struct Struct {
  | ^^^^^^
